<resources>
    <string name="app_name">StudentAccounting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="other">Other</string>
    <string name="select_currency">Currency</string>
    <string name="type_a_title">Type a title:</string>
    <string name="enter_an_amount">Enter an Amount:</string>
    <string name="amount_e_g_10_02">(e.g. 10.02)</string>
    <string name="name">Name</string>
    <string name="next"><![CDATA[>Next]]></string>
    <string name="select_a_category_column">Select a Category:</string>
    <string name="add">Add</string>
    <string name="new_category">New Category</string>
    <string name="spending_or_earning">Spending or Earning ?</string>
    <string name="spending">Spending</string>
    <string name="earning">Earning</string>
    <string name="transfer">Transfer</string>
    <string name="select_a_subcategory">Select a Subcategory:</string>
    <string name="new_sub_category">New Sub-Category</string>
    <string name="transaction_type_column">Transaction Type:</string>
    <string name="new_type_column">New Type</string>
    <string name="transfer_from_column">Transfer From:</string>
    <string name="transfer_to_column">Transfer To:</string>
    <string name="your_transactions">Your Transactions</string>
    <string name="upload">Upload</string>
    <string name="download">download</string>
    <string name="add_a_transaction">Add a Transaction</string>
    <string name="summary_column">Summary :</string>
    <string name="amount">Amount:</string>
    <string name="type">Type</string>
    <string name="name_column">Name:</string>
    <string name="currency_column">Currency:</string>
    <string name="confirm">Confirm</string>
    <string name="type_column">Type:</string>
    <string name="sub_category_column">Sub-Category:</string>
    <string name="category_column">Category:</string>
    <string name="amount_column">Amount:</string>
    <string name="home">Home</string>
    <string name="filter">Filter</string>
    <string name="time">Time</string>
    <string name="budget">Budget</string>
    <string name="counts">Counts</string>
    <string name="select_a_month">Select a Month</string>
    <string name="all_time">All Time</string>
    <string name="all_categories">All Categories</string>
    <string name="new_type">New Type</string>
    <string name="category">Category</string>
    <string name="select_month">Select Month</string>
    <string name="start_month">Start Month</string>
    <string name="end_month">End Month</string>
    <string name="subcategory">Subcategory</string>
    <string name="date_format">yyyy-mm-dd</string>
    <string name="currency_menu">Change Preferred Currency</string>
    <string name="search">Search...</string>
</resources>