<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditTransactionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textShortMessage|textPersonName"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/date_format"
            android:importantForAutofill="no"
            android:inputType="date|textPersonName"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etAmount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="10"
                android:ems="10"
                android:hint="@string/amount_e_g_10_02"
                android:importantForAutofill="no"

                android:inputType="numberDecimal"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                tools:ignore="NestedWeights" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="8"
                android:hint="@string/select_currency"
                android:minWidth="70dp">
                <!--            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"-->

                <AutoCompleteTextView
                    android:id="@+id/actvCurrency"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="#000000"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--        <Spinner-->
            <!--            android:id="@+id/spCurrency"-->
            <!--            android:layout_width="135dp"-->
            <!--            android:layout_height="match_parent"-->
            <!--            android:layout_margin="10dp" />-->
        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbSpending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/spending" />

            <RadioButton
                android:id="@+id/rbEarning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/earning" />

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/category"
            android:minWidth="70dp">
            <!--            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"-->

            <AutoCompleteTextView
                android:id="@+id/actvCategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="#000000"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/subcategory"
            android:minWidth="70dp">
            <!--            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"-->

            <AutoCompleteTextView
                android:id="@+id/actvSubcat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="#000000"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/type"
            android:minWidth="70dp">
            <!--            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"-->

            <AutoCompleteTextView
                android:id="@+id/actvType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="#000000"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/confirm"
            android:textSize="20sp" />
    </LinearLayout>
    </ScrollView>