<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:tag="CUR"
    tools:context=".SelectAmountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleAmount"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="15dp"
            android:layout_weight="15"
            android:text="@string/enter_an_amount"
            android:textColor="@color/purple_700"
            android:textSize="34sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="5"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etAmount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="10"
                android:ems="10"
                android:hint="@string/amount_e_g_10_02"
                android:importantForAutofill="no"

                android:inputType="numberDecimal"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                tools:ignore="NestedWeights" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="8"
                android:hint="@string/select_currency"
                android:minWidth="70dp">
                <!--            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"-->

                <AutoCompleteTextView
                    android:id="@+id/actvCurrency"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="#000000"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--        <Spinner-->
            <!--            android:id="@+id/spCurrency"-->
            <!--            android:layout_width="135dp"-->
            <!--            android:layout_height="match_parent"-->
            <!--            android:layout_margin="10dp" />-->
        </LinearLayout>

        <TextView
            android:id="@+id/titleName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="15dp"
            android:layout_weight="15"
            android:text="@string/type_a_title"
            android:textColor="@color/purple_700"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:layout_weight="5"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textShortMessage|textPersonName"
            android:text="@string/name"
            android:textSize="24sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50">

            <Button
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/next"
                android:textSize="34sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.16000003" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>