<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectIsSpendingFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleSpending"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="15dp"
            android:layout_weight="15"
            android:text="@string/spending_or_earning"
            android:textColor="@color/purple_700"
            android:textSize="34sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="15dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="75"
                android:orientation="horizontal"
                tools:ignore="NestedWeights">

                <Button
                    android:id="@+id/btnSpending"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/spending"
                    android:elevation="20dp"
                    android:text="@string/spending"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/btnEarning"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/earning"
                    android:elevation="20dp"
                    android:text="@string/earning"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    app:cornerRadius="10dp"
                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>

            <Button
                android:id="@+id/btnTransfer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="30dp"
                android:layout_weight="25"
                android:backgroundTint="@color/material_dynamic_neutral40"
                android:text="@string/transfer"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>