<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectSubcategoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleSubcat"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="15dp"
            android:layout_weight="15"
            android:text="@string/select_a_subcategory"
            android:textColor="@color/purple_700"
            android:textSize="34sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etSubcat"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="15sp"
                android:ems="10"
                android:hint="@string/new_sub_category"
                android:inputType="textPersonName"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/btnSubcatNext"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="15sp"
                android:text="@string/add" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSubcat"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="15sp"
            android:layout_weight="50"
            app:spanCount="2">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>